update about  edit

--- a/edit-content/home-edit.html
+++ b/edit-content/home-edit.html
@@ -254,7 +254,7 @@
                         </a>
                         <ul aria-expanded="false">
                             <li><a href="./home-edit.html">Home</a></li>
-                            <li><a href="./layout-one-column.html">About Us</a></li>
+                            <li><a href="./about-edit.html">About Us</a></li>
                             <li><a href="./holidays-edit.html">Holidays</a></li>
                             <li><a href="./layout-compact-nav.html">Blog</a></li>
                             
@@ -548,7 +548,7 @@
                       
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Our Team</h4>
+                  <h4 class="card-title">Our Excellent Guides</h4>
                   <!-- <p class="text-muted m-b-15 f-s-12">Use the input classes on an <code>.input-default, input-flat, .input-rounded</code> for Default input.</p> -->
                   <div class="basic-form">
                     <form class="mb-3">
