--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         </a>
                         <ul aria-expanded="false">
                             <li><a href="./edit-content/home-edit.html">Home</a></li>
-                            <li><a href="./layout-one-column.html">About Us</a></li>
+                            <li><a href="./about-edit.html">About Us</a></li>
                             <li><a href="./edit-content/holidays-edit.html">Holidays</a></li>
                             <li><a href="./layout-compact-nav.html">Blog</a></li>
                             
