--- a/edit-content/tour-grid-edit.html
+++ b/edit-content/tour-grid-edit.html
@@ -557,6 +557,93 @@
                         </div>
                       </div>
                       
+                      <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Tour List</h4>
+                            <div class="table-responsive">
+                                <table class="table table-bordered verticle-middle">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Title</th>
+                                            <th scope="col">Description</th>
+                                            <th scope="col">Date</th>
+                                            <th scope="col">Country</th>
+                                            <th scope="col">Price</th>
+                                            <th scope="col">Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Air Conditioner</td>
+                                            <td>
+                                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ducimus assumenda pariatur facilis...
+                                            </td>
+                                            <td>Apr 20,2018</td>
+                                            <td>Australia</td>
+                                            <td>192$</td>
+                                            <td><span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Air Conditioner</td>
+                                            <td>
+                                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ducimus assumenda pariatur facilis...
+                                            </td>
+                                            <td>Apr 20,2018</td>
+                                            <td>Australia</td>
+                                            <td>192$</td>
+                                            <td><span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Air Conditioner</td>
+                                            <td>
+                                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ducimus assumenda pariatur facilis...
+                                            </td>
+                                            <td>Apr 20,2018</td>
+                                            <td>Australia</td>
+                                            <td>192$</td>
+                                            <td><span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Air Conditioner</td>
+                                            <td>
+                                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ducimus assumenda pariatur facilis...
+                                            </td>
+                                            <td>Apr 20,2018</td>
+                                            <td>Australia</td>
+                                            <td>192$</td>
+                                            <td><span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Air Conditioner</td>
+                                            <td>
+                                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ducimus assumenda pariatur facilis...
+                                            </td>
+                                            <td>Apr 20,2018</td>
+                                            <td>Australia</td>
+                                            <td>192$</td>
+                                            <td><span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Air Conditioner</td>
+                                            <td>
+                                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ducimus assumenda pariatur facilis...
+                                            </td>
+                                            <td>Apr 20,2018</td>
+                                            <td>Australia</td>
+                                            <td>192$</td>
+                                            <td><span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
              
                       <div class="card">
                         <div class="card-body">
