--- a/edit-content/about-edit.html
+++ b/edit-content/about-edit.html
@@ -366,7 +366,8 @@
                 <li><a href="./home-edit.html">Home</a></li>
                 <li><a href="./about-edit.html">About Us</a></li>
                 <li><a href="./holidays-edit.html">Holidays</a></li>
-                <li><a href="./layout-compact-nav.html">Blog</a></li>
+                <li><a href="./blog-single-grid.html">Blog</a></li>
+                            <li><a href="./tour-grid-edit.html">Tour</a></li>
               </ul>
             </li>
 
