--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
                             <li><a href="./edit-content/home-edit.html">Home</a></li>
                             <li><a href="./about-edit.html">About Us</a></li>
                             <li><a href="./edit-content/holidays-edit.html">Holidays</a></li>
-                            <li><a href="./layout-compact-nav.html">Blog</a></li>
+                            <li><a href="./blog-single-grid.html">Blog</a></li>
+                            <li><a href="./tour-grid-edit.html">Tour</a></li>
                             
                         </ul>
                     </li>
