--- a/edit-content/blog-single-edit.html
+++ b/edit-content/blog-single-edit.html
@@ -258,6 +258,7 @@
                             <li><a href="./holidays-edit.html">Holidays</a></li>
                             <li><a href="./blog-single-grid.html">Blog</a></li>
                             <li><a href="./tour-grid-edit.html">Tour</a></li>
+                            <li><a href="./tour-single-edit.html">Tour</a></li>
 
                             
                         </ul>
