--- a/edit-content/about-edit.html
+++ b/edit-content/about-edit.html
@@ -367,8 +367,8 @@
                 <li><a href="./about-edit.html">About Us</a></li>
                 <li><a href="./holidays-edit.html">Holidays</a></li>
                 <li><a href="./blog-single-grid.html">Blog</a></li>
-                            <li><a href="./tour-grid-edit.html">Tour</a></li>
-                            <li><a href="./tour-single-edit.html">Tour</a></li>
+                            <li><a href="./tour-grid-edit.html">Tour Grid</a></li>
+                            <li><a href="./tour-single-edit.html">Tour Single</a></li>
               </ul>
             </li>
 
