--- a/edit-content/tour-grid-edit.html
+++ b/edit-content/tour-grid-edit.html
@@ -423,10 +423,9 @@
             <div class="container-fluid">
                 <div class="col-lg-12">
 
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-body">
                           <h4 class="card-title">Hero Text</h4>
-                          <!-- <p class="text-muted m-b-15 f-s-12">Use the input classes on an <code>.input-default, input-flat, .input-rounded</code> for Default input.</p> -->
                           <div class="basic-form">
                             <form>
                                 <div class="d-flex gap-3 align-items-center">
@@ -456,7 +455,7 @@
                             </form>
                           </div>
                         </div>
-                      </div>
+                      </div> -->
 
                       
                       <div class="card">
