--- a/edit-content/holidays-edit.html
+++ b/edit-content/holidays-edit.html
@@ -366,7 +366,9 @@
                 <li><a href="./home-edit.html">Home</a></li>
                 <li><a href="./about-edit.html">About Us</a></li>
                 <li><a href="./holidays-edit.html">Holidays</a></li>
-                <li><a href="./blog-single-edit.html">Blog</a></li>
+                
+                            <li><a href="./blog-list-edit.html">Blog List</a></li>
+                            <li><a href="./blog-single-edit.html">Blog Single</a></li>
                             <li><a href="./tour-grid-edit.html">Tour Grid</a></li>
                             <li><a href="./tour-single-edit.html">Tour Single</a></li>
               </ul>
